force-app/main/default/objects/Company_Wide_BiC_Information__c/Company_Wide_BiC_Information__c.object-meta.xml
<CustomObject>
    <label>Company-Wide BiC Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company-Wide BiC Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>