force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/BiC_Comments__c.field-meta.xml
<CustomField>
    <fullName>BiC_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BiC Comments</label>
    <type>TextArea</type>
</CustomField>