force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/BiC_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>BiC_Last_Modified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zz_BiC Last Modified Date</label>
    <type>Date</type>
</CustomField>