force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/BiC_Source__c.field-meta.xml
<CustomField>
    <fullName>BiC_Source__c</fullName>
    <label>BiC Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D&amp;B - ODB</fullName>
            </value>
            <value>
                <fullName>Census - ODB</fullName>
            </value>
            <value>
                <fullName>Underwriting (New Business)</fullName>
            </value>
            <value>
                <fullName>UHC (Use for Existing Customers)</fullName>
            </value>
            <value>
                <fullName>Census</fullName>
                <isActive>false</isActive>
                <label>Census</label>
            </value>
            <value>
                <fullName>D&amp;B</fullName>
                <isActive>false</isActive>
                <label>D&amp;B</label>
            </value>
            <value>
                <fullName>UHC</fullName>
                <isActive>false</isActive>
                <label>UHC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>