force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/BiC_Source_Date__c.field-meta.xml
<CustomField>
    <fullName>BiC_Source_Date__c</fullName>
    <label>BiC Source Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2026-00 (month unknown)</fullName>
            </value>
            <value>
                <fullName>2026-01</fullName>
            </value>
            <value>
                <fullName>2026-02</fullName>
            </value>
            <value>
                <fullName>2026-03</fullName>
            </value>
            <value>
                <fullName>2026-04</fullName>
            </value>
            <value>
                <fullName>2026-05</fullName>
            </value>
            <value>
                <fullName>2026-06</fullName>
            </value>
            <value>
                <fullName>2026-07</fullName>
            </value>
            <value>
                <fullName>2026-08</fullName>
            </value>
            <value>
                <fullName>2026-09</fullName>
            </value>
            <value>
                <fullName>2026-10</fullName>
            </value>
            <value>
                <fullName>2026-11</fullName>
            </value>
            <value>
                <fullName>2026-12</fullName>
            </value>
            <value>
                <fullName>2025-00 (month unknown)</fullName>
            </value>
            <value>
                <fullName>2025-01</fullName>
            </value>
            <value>
                <fullName>2025-02</fullName>
            </value>
            <value>
                <fullName>2025-03</fullName>
            </value>
            <value>
                <fullName>2025-04</fullName>
            </value>
            <value>
                <fullName>2025-05</fullName>
            </value>
            <value>
                <fullName>2025-06</fullName>
            </value>
            <value>
                <fullName>2025-07</fullName>
            </value>
            <value>
                <fullName>2025-08</fullName>
            </value>
            <value>
                <fullName>2025-09</fullName>
            </value>
            <value>
                <fullName>2025-10</fullName>
            </value>
            <value>
                <fullName>2025-11</fullName>
            </value>
            <value>
                <fullName>2025-12</fullName>
            </value>
            <value>
                <fullName>2024-00 (month unknown)</fullName>
            </value>
            <value>
                <fullName>2024-01</fullName>
            </value>
            <value>
                <fullName>2024-02</fullName>
            </value>
            <value>
                <fullName>2024-03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>