force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/BiC_Source_Records__c.field-meta.xml
<CustomField>
    <fullName>BiC_Source_Records__c</fullName>
    <label>BiC Source # Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>