force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/BiC_Timelines__c.field-meta.xml
<CustomField>
    <fullName>BiC_Timelines__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zz_BiC Timelines</label>
    <length>160</length>
    <type>Text</type>
</CustomField>