force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Company_Wide_BiC_Infromations</relationshipName>
    <type>Lookup</type>
</CustomField>