force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Updated</label>
    <type>Date</type>
</CustomField>