force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/Overall_BiC__c.field-meta.xml
<CustomField>
    <fullName>Overall_BiC__c</fullName>
    <label>Overall BiC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>