force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Year</fullName>
            </value>
            <value>
                <fullName>Mid Year</fullName>
            </value>
            <value>
                <fullName>Projected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>