force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/UHC_UDS_Submission_Comparison__c.field-meta.xml
<CustomField>
    <fullName>UHC_UDS_Submission_Comparison__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zz_UHC UDS Submission Comparison</label>
    <length>160</length>
    <type>Text</type>
</CustomField>