force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/vs_Aetna__c.field-meta.xml
<CustomField>
    <fullName>vs_Aetna__c</fullName>
    <label>vs Aetna</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>