force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/vs_Anthem__c.field-meta.xml
<CustomField>
    <fullName>vs_Anthem__c</fullName>
    <label>vs Anthem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>