force-app/main/default/objects/Company_Wide_BiC_Information__c/fields/vs_Blues_Alt__c.field-meta.xml
<CustomField>
    <fullName>vs_Blues_Alt__c</fullName>
    <label>vs Blues Alt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>