force-app/main/default/objects/Company_Wide_BiC_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Year__c</columns>
    <columns>Type__c</columns>
    <columns>Overall_BiC__c</columns>
    <columns>vs_Aetna__c</columns>
    <columns>BiC_Source__c</columns>
    <columns>BiC_Last_Modified_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>