force-app/main/default/objects/Company_Wide_BiC_Information__c/listViews/Debbie_s_List.listView-meta.xml
<ListView>
    <fullName>Debbie_s_List</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Year__c</columns>
    <columns>Type__c</columns>
    <columns>Overall_BiC__c</columns>
    <columns>vs_Aetna__c</columns>
    <columns>vs_Anthem__c</columns>
    <columns>vs_Blues__c</columns>
    <columns>vs_Blues_Alt__c</columns>
    <columns>vs_Cigna__c</columns>
    <columns>BiC_Source__c</columns>
    <columns>BiC_Source_Date__c</columns>
    <columns>BiC_Source_Records__c</columns>
    <columns>BiC_Comments__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>99 Cents Only Stores</value>
    </filters>
    <label>Debbie&apos;s List</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>