force-app/main/default/objects/Company_Wide_BiC_Information__c/listViews/Michele_Validation.listView-meta.xml
<ListView>
    <fullName>Michele_Validation</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Type__c</columns>
    <columns>Overall_BiC__c</columns>
    <columns>vs_Aetna__c</columns>
    <columns>vs_Anthem__c</columns>
    <columns>vs_Blues__c</columns>
    <columns>vs_Blues_Alt__c</columns>
    <columns>vs_Cigna__c</columns>
    <columns>BiC_Source__c</columns>
    <columns>BiC_Source_Date__c</columns>
    <columns>BiC_Source_Records__c</columns>
    <columns>BiC_Comments__c</columns>
    <columns>BiC_Timelines__c</columns>
    <columns>UHC_UDS_Submission_Comparison__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>contains</operation>
        <value>PetSmart</value>
    </filters>
    <label>Michele Validation</label>
</ListView>